samples/_failures_safe/1761339977_6e5d93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a5916c7d.c: In function ‘main’:
./samples/SAFE/__tmp_a5916c7d.c:169:9: error: expected declaration or statement at end of input
  169 |         }
      |         ^
./samples/SAFE/__tmp_a5916c7d.c:169:9: error: expected declaration or statement at end of input
